first commit for package json

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,9 @@ yarn-error.log*
 # vercel
 .vercel
 
-# Ignore package.json and package-lock.json
-package.json
-package-lock.json
+# # Ignore package.json and package-lock.json
+# package.json
+# package-lock.json
  
 # Ignore the build folder
 build/
