--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "18.1.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
