--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "flowbite": "^2.3.0",
     "graphql": "^16.5.0",
     "next": "12.1.6",
@@ -20,7 +21,10 @@
     "react-dom": "18.1.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
