--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "chart.js": "^4.4.4",
     "flowbite": "^2.3.0",
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "next-i18next": "^15.2.0",
     "react": "18.1.0",
     "react-apexcharts": "^1.3.7",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.1.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
