--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "apollo3-cache-persist": "^0.15.0",
     "chart.js": "^4.4.4",
     "flowbite": "^2.3.0",
     "graphql": "^16.5.0",
