--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
