--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.4",
     "flowbite": "^2.3.0",
     "graphql": "^16.5.0",
+    "i18next-http-backend": "^3.0.2",
     "next": "12.1.6",
     "next-i18next": "^15.2.0",
     "react": "18.1.0",
